--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.6",
