--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "^14.0.4",
     "i18next": "^23.10.1",
     "next": "^14.0.4",
+    "next-compose-plugins": "^2.2.1",
     "next-i18next": "^15.2.0",
     "next-translate": "^2.6.2",
     "react": "^18.2.0",
