--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.0.5",
     "typescript": "5.4.2"
   },
